[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module"]

[project]
name = "mc_turbojet"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.1.0"

dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff",
    "maturin",
    "ty"
]
